[project]
authors = [{ name = "kamran", email = "kamranakmal6776@gmail.com" }]
license = "MIT"
name = "networksecurity"
version = "0.1.0"
description = "This is a machine learning project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "catboost>=1.2.8",
    "fastapi>=0.124.4",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "streamlit>=1.52.1",
    "xgboost>=3.1.2",
]
[tool.setuptools.packages.find]
where = ["."]
include = ["networksecurity*"]

